# advent-of-code

./: .gitignore  README.md
2019/day03/src/: geometry.rs  main.rs
2019/day04/src/: lib.rs
2019/day05/src/: lib.rs  main.rs
2019/day07/: Cargo.toml
2019/day07/src/: intcode.rs
2020/: AdventOfCode.fsproj  Day01.fs  Day03.fs  Day04.fs  Day05.fs  Day06.fs  Day08.fs  Day09.fs  Day10.fs  Day11.fs  Day15.fs  Day16.fs  Day17.fs  Day18.fs  Day20.fs  Program.fs  README.md  Range.fs
clojure/advent-of-code/: README.md  deps.edn
clojure/advent-of-code/src/jacoelho/: aoc.clj  math.clj
clojure/advent-of-code/src/jacoelho/2015/: aoc.clj  day01.clj  day02.clj  day03.clj  day04.clj  day05.clj  day06.clj  day07.clj  day08.clj  day09.clj  day10.clj  day11.clj  (+11 more)
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/src/: board.rs  direction.rs  geometry.rs  lib.rs  main.rs  wire.rs
day04/: Cargo.toml
day04/src/: lib.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/src/: main.rs
day07/src/: intcode.rs  main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: intcode.rs  main.rs
f#/2020/: AdventOfCode.fsproj  Day02.fs  Day03.fs  Day05.fs  Day06.fs  Day07.fs  Day12.fs  Day13.fs  Day14.fs  Day17.fs  Day19.fs  List.fs  Program.fs  Sequence.fs
rust/2019/: README.md
rust/2019/day02/src/: main.rs
rust/2019/day03/: Cargo.toml
rust/2019/day03/src/: wire.rs
rust/2019/day04/src/: main.rs
rust/2019/day06/: Cargo.toml
rust/2019/day06/src/: main.rs
rust/2019/day07/src/: main.rs
