[package]
name = "day02"
version = "0.1.0"
authors = ["jacoelho <jose.alberto.coelho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "day02"
path = "src/main.rs"

[dependencies]
